# express

./: .gitignore  CLAUDE.md  CMakeLists.txt  FindExpress.cmake  LICENSE  PERFORMANCE_CHECKLIST.md  README.md
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
express/: allocator.h  arena_token.h  basic_expression.h  buffer.h  express.cpp  express.h  express.vcproj  express10.vcxproj  express10.vcxproj.filters  express8.vcproj  express_delegate.h  express_export.h  formatter_delegate.h  function.cpp  function.h  lexem.h  lexem_data.h  lexer.cpp  lexer.h  lexer_delegate.h  parser.cpp  parser.h  parser_delegate.h  standard_functions.h  standard_tokens.h  strings.h  token.h  value.h
tests/: CMakeLists.txt  test.cpp
